--- a/2021_lp2-divisas1/divisasapp/src/main/resources/templates/divisa_result.html
+++ b/2021_lp2-divisas1/divisasapp/src/main/resources/templates/divisa_result.html
@@ -5,11 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Pagina de Resultados</h1>
+	<h1>Resultado</h1>
 	<p>El resultado de la operacion es:</p>
-	
-	<h2 th:text="${resultado} +' '+${monedaDestino.descripcion}"></h2>
-	
+	<h2 th:text=${resultado}></h2>
 	<a href="/divisa">Retornar</a>
 
 </body>
